--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Análisis de datos de RAdiodifusión en México
+description: "Análisis de datos de Radiodifusión en AM y FMy Televisión Digital Terrestre con Jupyter Notebooks"
