--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: "Análisis de datos de Radiodifusión en México"
-description: "Análisis de datos de Radiodifusión en AM y FMy Televisión Digital Terrestre con Jupyter Notebooks"
+description: "Análisis de datos de Radiodifusión en AM,FM y Televisión Digital Terrestre con Jupyter Notebooks"
